# Bert-VITS2

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  App.bat  Bert-VITS2 Cook Book.md  Dataset.bat  Dockerfile  Dockerfile.deploy  Dockerfile.train  Editor.bat  Inference.bat  Initialize.bat  LICENSE  Merge.bat  README.md  Server.bat  Style-Bert-VITS2 JP-Extra (EN).md  Style.bat  StyleVectors.bat  Train.bat  add_punc.py  all_process.py  app.py  asr_transcript.py  attentions.py  attentions_onnx.py  autoLable.py  bert_gen.py  clap_gen.py  clap_wrapper.py  clean_list.py  clean_raw.py  clustering.ipynb  colab.ipynb  commons.py  compress_model.py  config.py  config.yml  convert_bert_onnx.py  (+76 more)
.github/workflows/: push_format.yml
CLAP/: README.md  pyproject.toml
CLAP/msclap/: CLAPWrapper.py  __init__.py
CLAP/msclap/configs/: config_clapcap.yml
CLAP/msclap/models/: __init__.py  audio.py  clap.py  htsat.py  mapper.py  pytorch_utils.py
bert/: bert_models.json
bert/Erlangshen-DeBERTa-v2-710M-Chinese/: config.json  tokenizer_config.json  vocab.txt
bert/Erlangshen-MegatronBert-1.3B/: vocab.txt
bert/Erlangshen-MegatronBert-1.3B-Chinese/: config.json
bert/Erlangshen-MegatronBert-3.9B-Chinese/: config.json  tokenizer_config.json
bert/bert-base-japanese-v3/: README.md  config.json  vocab.txt
bert/bert-large-japanese-v2/: README.md  config.json  tokenizer_config.json
bert/bge-large-zh-v1.5/: config.json  config_sentence_transformers.json  modules.json  sentence_bert_config.json  tokenizer.json  tokenizer_config.json
bert/chinese-roberta-wwm-ext-large/: .gitattributes  README.md  added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
bert/chinese-roberta-wwm-ext-large-onnx/: config.json  tokenizer.json  tokenizer_config.json
bert/deberta-v2-large-japanese/: README.md  config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
bert/deberta-v2-large-japanese-char-wwm/: README.md  tokenizer.json  tokenizer_config.json  vocab.txt
bert/deberta-v2-large-japanese-char-wwm-onnx/: config.json
bert/deberta-v3-large/: .gitattributes  README.md  config.json  generator_config.json  tokenizer.json
bert/deberta-v3-large-onnx/: tokenizer_config.json
common/: constants.py  log.py  stdout_wrapper.py  subprocess_utils.py  tts_model.py
configs/: config-V210.json  config.json  config_baTeacher.json  config_bakiMix.json  config_c1.json  config_c1test.json  config_genshin.json  config_jp_extra.json  config_test.json  config_wnjbert.json  configs_jp_extra.json  paths.yml
css/: custom.css
dict_data/: .gitignore  default.csv
docs/: CHANGELOG.md  CLI.md  FAQ.md  README_en.md  Style-Bert-VITS2_en.md  TERMS_OF_USE.md  TERM_OF_USE.md  paperspace.md
emotional/clap-htsat-fused/: README.md  config.json  preprocessor_config.json  tokenizer.json  tokenizer_config.json  vocab.json
emotional/wav2vec2-large-robust-12-ft-emotion-msp-dim/: .gitattributes  README.md  config.json  preprocessor_config.json
filelists/: esd.list  esd.list.cleaned  sample.list  train.list  val.list
for_deploy/: infer.py  infer_utils.py  webui.py
g2pW/: MONOPHONIC_CHARS.txt  POLYPHONIC_CHARS.txt  char_bopomofo_dict.json  config.py  pyproject.toml
g2pW/pypinyin_G2pW_bv2/: __init__.py  g2pw.py
g2pW/pypinyin_G2pW_bv2/g2pw1/: bopomofo_to_pinyin_wo_tune_dict.json  char_convert.py  dataset.py  onnx_api.py  utils.py
g2pW/src/: __init__.py  g2pw.py  pyproject.toml
g2pW/src/g2pw1/: char_bopomofo_dict.json  char_convert.py  dataset.py  utils.py
gradio_tabs/: convert_onnx.py  dataset.py  download_tab.py  inference.py  merge.py  style_vectors.py  train.py
monotonic_align/: __init__.py  core.c  core.py
oldVersion/: __init__.py
oldVersion/V100/: __init__.py  models.py
oldVersion/V101/: __init__.py  models.py
oldVersion/V110/: __init__.py
oldVersion/V111/: __init__.py  models.py
oldVersion/V200/: __init__.py
oldVersion/V210/: __init__.py  data_utils.py  emo_gen.py  models.py
oldVersion/V220/: __init__.py  clap_gen.py  data_utils.py
oldVersion/ZH_Clap/: __init__.py  clap_gen.py  clap_wrapper.py
onnx_modules/: __init__.py
onnx_modules/V200/: __init__.py  models_onnx.py
onnx_modules/V210/: models_onnx.py
onnx_modules/V210_OnnxInference/: __init__.py
onnx_modules/V220/: __init__.py  attentions_onnx.py  models_onnx.py
onnx_modules/V220_OnnxInference/: __init__.py
onnx_modules/V220_novq_dev/: attentions_onnx.py  models_onnx.py
onnx_modules/V230/: __init__.py  models_onnx.py
onnx_modules/V230_OnnxInference/: __init__.py
onnx_modules/V240/: models_onnx.py
onnx_modules/V240_JP/: models_onnx.py
onnx_modules/V240_OnnxInference/: __init__.py
onnx_modules/V240_ZH/: __init__.py  models_onnx.py
scripts/: Clean.bat  Install-Style-Bert-VITS2-CPU.bat  Install-Style-Bert-VITS2.bat  Setup-Python.bat  Setup.bat  Update-Style-Bert-VITS2.bat  Update-to-Dict-Editor.bat  Update-to-JP-Extra.bat
scripts/sbv2/: Install-Style-Bert-VITS2-CPU.bat  Install-Style-Bert-VITS2.bat  Update-Style-Bert-VITS2.bat
slm/wavlm-base-plus/: README.md  config.json  preprocessor_config.json
style_bert_vits2/: .editorconfig  constants.py  logging.py  tts_model.py  voice.py
style_bert_vits2/models/: attentions.py  commons.py  hyper_parameters.py  infer.py  infer_onnx.py  models.py  models_jp_extra.py  modules.py  monotonic_alignment.py  transforms.py  utils.py
style_bert_vits2/nlp/: __init__.py  bert_models.py  onnx_bert_models.py  symbols.py
style_bert_vits2/text_processing/: __init__.py  bert_models.py  cleaner.py  symbols.py
style_bert_vits2/utils/: __init__.py  stdout_wrapper.py  (+2 more)
tests/: test_main.py
text/: __init__.py  bert_utils.py  chinese.py  chinese_bert.py  cleaner.py  english.py  english_bert_mock.py  get_bert.py  japanese.py  japanese_bert.py  japanese_mora_list.py  parser.py  symbols.py  tone_sandhi.py
tools/: __init__.py  classify_language.py  gen_phones.py  log.py  sentence.py  stdout_wrapper.py  subprocess_utils.py  translate.py
webui/: __init__.py  dataset.py  inference.py  merge.py  style_vectors.py  train.py
(+120 files in other folders)
